Intial changes for review comments

--- a/cfm_templates/cfm.yml
+++ b/cfm_templates/cfm.yml
@@ -26,11 +26,14 @@ Parameters:
   ElasticsearchDomainArn:
     Type: String
     Description: Arn of Elasticsearch domain
+  MSKStorageSize:
+    Type: Number
+    Description: Size of MSK storage in GiB
   Subnets:
     Type: List<AWS::EC2::Subnet::Id>
     Description: Subnet Id
   MicoserviceSubnetSg:
-    Type: AWS::EC2::SecurityGroup::Id
+    Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Subnet SG Id
 Mappings: 
   CommonServiceMeta: 
@@ -184,7 +187,7 @@ Resources:
           - Fn::GetAtt:  [ MSKSecurityGroup , GroupId]
         StorageInfo:
           EBSStorageInfo:
-            VolumeSize: 20
+            VolumeSize: ${MSKStorageSize}
       ClusterName: 
         Fn::Sub: 
           - cb-${Environment}-${RegionId}-${Microservice}-msk-cluster
