--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -13,24 +13,13 @@ input {
 
 filter {
         mutate{
-          remove_field => ["@timestamp"]
-        }
-        json {
-        source => "message"
-        remove_field => ["@version"]
-        }
-        json{
-        source => "message"
-        remove_field => ["host","context","agent","message","ecs","log"]
-        }
-        mutate {
-            replace => { "timestamp" => "%{@timestamp}" }
+          remove_field => ["host","context","message","ecs","log"]
         }
 }
 output {
   amazon_es {
     hosts => ["${ES_DOMAIN_NAME}"]
-    region => "us-east-2"
+    region => "${ES_REGION}"
     codec => "json"
     index => "${ES_INDEX}"
     ssl => true
