--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -14,8 +14,13 @@ input {
 filter {
     mutate {
         gsub => [
-            "logMessage", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
+            "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
         ]
+    }
+    # Needed ?
+    uuid {
+        target => "uuid"
+        overwrite => true
     }
 }
 output {
