--- a/config_files/logstash-s3.conf
+++ b/config_files/logstash-s3.conf
@@ -8,6 +8,8 @@ input {
     consumer_threads => "${S3_CONSUMER_THREADS}"
     codec => json
     auto_offset_reset => "earliest"
+    max_poll_records => "10000"
+    max_partition_fetch_bytes => "10000000"
   }
 }
 
@@ -15,9 +17,8 @@ input {
 output {
     s3{
         prefix => "%{+YYYY}/%{+MM}/%{+dd}"
-        size_file => 1000
-        time_file => 1
-        region => "${REGION}"
+        size_file => 10000000
+        region => "${S3_REGION}"
         bucket => "${S3_BUCKET}"
     }
 }
