--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -8,6 +8,8 @@ input {
     group_id => "${MASKER_CONSUMER_GROUP_ID}"
         consumer_threads => "${MASKER_CONSUMER_THREADS}"
     auto_offset_reset => "earliest"
+    max_poll_records => "10000"
+    max_partition_fetch_bytes => "10000000"
   }
 }
 
