--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -8,6 +8,8 @@ input {
     consumer_threads => "${ES_SYNC_CONSUMER_THREADS}"
     codec => json
     auto_offset_reset => "earliest"
+    max_poll_records => "10000"
+    max_partition_fetch_bytes => "10000000"
   }
 }
 
