--- a/config_files/logstash-s3.conf
+++ b/config_files/logstash-s3.conf
@@ -19,6 +19,6 @@ output {
         prefix => "%{+YYYY}/%{+MM}/%{+dd}"
         size_file => 10000000
         region => "${S3_REGION}"
-        bucket => "${S3_BUCKET}"
+        bucket => "${S3_BUCKET_NAME}"
     }
 }
