--- a/logstash/log-maskerservice.conf
+++ b/logstash/log-maskerservice.conf
@@ -11,7 +11,7 @@ input {
 filter {
     mutate {
         gsub => [
-            "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{1,3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|(?:(4[0-9]{2})[0-9]{7}([0-9]{3})(?:[0-9]{3})?|(?:(5[1-5][0-9]{2})|(222[1-9])|(22[3-9][0-9])|(2[3-6][0-9]{2})|(27[01][0-9])|(2720))[0-9]{9}([0-9]{3})|(3[47])[0-9]{10}([0-9]{3})|3(?:0[0-5]|[68][0-9])[0-9]{11}|6(?:011|5[0-9]{2})[0-9]{12}|(?:2131|1800|35\d{3})\d{11})|([0-9]{3,4})", "\1\4\8xxxxxx\3\6"
+            "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{1,3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|(?:(4[0-9]{3})[0-9-\s]{9,12}([0-9]{3})?|(?:(5[1-5][0-9]{2})|(222[1-9])|(22[3-9][0-9])|(2[3-6][0-9]{2})|(27[01][0-9])|(2720))[0-9-\s]{9,12}([0-9]{3})|(3[47])[0-9-\s]{10,12}([0-9]{3})|3(?:0[0-5]|[68][0-9])[0-9-\s]{9,12}([0-9]{2})|6(?:011|5[0-9]{2})[0-9-\s]{9,12}[0-9]{3}|(?:2131|1800|35[0-9-\s]{3,4})[0-9-\s]{8,11}[0-9]{3})", "\1\4\8xxxxxx\3\6"
         ]
     }
 }
