--- a/logstash/log-maskerservice.conf
+++ b/logstash/log-maskerservice.conf
@@ -11,7 +11,7 @@ input {
 filter {
     mutate {
         gsub => [
-            "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{1,3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|(?:(4[0-9]{3})[0-9-\s]{9,12}([0-9]{3})?|(?:(5[1-5][0-9]{2})|(222[1-9])|(22[3-9][0-9])|(2[3-6][0-9]{2})|(27[01][0-9])|(2720))[0-9-\s]{9,12}([0-9]{3})|(3[47])[0-9-\s]{10,12}([0-9]{3})|3(?:0[0-5]|[68][0-9])[0-9-\s]{9,12}([0-9]{2})|6(?:011|5[0-9]{2})[0-9-\s]{9,12}[0-9]{3}|(?:2131|1800|35[0-9-\s]{3,4})[0-9-\s]{8,11}[0-9]{3})", "\1\4\8xxxxxx\3\6"
+            "message", "(?<EM_START>[a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*(?<EM_END>[a-zA-Z0-9-.]{1,3})|(?<AI_START>live|test)_(__dev__)?[a-zA-Z0-9]*(?<AI_END>[a-zA-Z0-9-.]{3})|(?:(?<VISA_START>4[0-9]{3})[0-9-\s]{9,12}([0-9]{3})?|(?<MAS_START>(5[1-5][0-9]{2})|(222[1-9])|(22[3-9][0-9])|(2[3-6][0-9]{2})|(27[01][0-9])|(2720))[0-9-\s]{9,12}(?<MAS_END>[0-9]{3})|(?<AMEX_START>3[47])[0-9-\s]{10,12}(?<AMEX_END>[0-9]{3})|(?<DC_START>3(?:0[0-5]|[68][0-9]))[0-9-\s]{9,12}(?<DC_END>[0-9]{2})|(?<DIS_START>6(?:011|5[0-9]{2}))[0-9-\s]{9,12}(?<DIS_END>[0-9]{3})|(?<J_START>2131|1800|35[0-9-\s]{3,4})[0-9-\s]{8,11}(?<J_END>[0-9]{3}))", "\k<EM_START>\k<AI_START>\k<VISA_START>\k<MAS_START>\k<AMEX_START>\k<DC_START>\k<DIS_START>\k<J_START>xxxxxx\k<EM_END>\k<AI_END>\k<MAS_END>\k<AMEX_END>\k<DC_END>\k<DIS_END>\k<J_END>"
         ]
     }
 }
